--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
   "name": "my-projects-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Бэкенд проекта my-projects",
+  "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "lint": "npx eslint",
+    "lint:fix": "npx eslint . --ext .js,.json --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": {
+    "name": "Oleg Zharov",
+    "email": "levineye@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/levineye13/my-projects-backend"
+  },
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
+  }
 }
