--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Бэкенд проекта my-projects",
   "private": "true",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "lint": "npx eslint",
-    "lint:fix": "npx eslint . --ext .js,.json --fix"
+    "start": "tsc && node dist/server.js",
+    "dev": "tsc && nodemon dist/server.js"
   },
   "author": {
     "name": "Oleg Zharov",
@@ -19,10 +17,11 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.28.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "nodemon": "^2.0.7"
+    "@types/node": "^16.7.7",
+    "nodemon": "^2.0.7",
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2",
+    "typescript": "^3.9.10"
   },
   "dependencies": {
     "dotenv": "^10.0.0"
